Less noisy logging. Improved scripts and Docker setup.
General theme: improve the first use experience and make things
simpler in general. All things noticed while updating the Getting started
sections.

Route Lucene logs through log4j as well. Set default logging levels
to INFO for BlackLab, WARN for Lucene. Don't report skipping certain
builtin plugins on startup. Only report skipping plugin once.

Also some cleanups and changes to e.g. Docker setup.

Removed old and insecure way of authenticating via secret HTTP headers
(which was already disabled by default of course).

Changed AuthHttpBasic required config setting default to true, as
this is the setting that works with the frontend.

Downgraded some log messages from info to debug level.