@@ -18,36 +18,41 @@ if [ $# -lt 3 ]; then
   echo '                       Note that symlinks will generally not work inside the container.'
   echo '  - FORMAT             the format to use, either a builtin format (e.g. tei-p5)'
   echo '                       or a path to a format file (.blf.yaml).'
-  echo '  - BLACKLAB_VERSION   (optional) the BlackLab Docker image to use. Defaults to "dev",'
-  echo '                       but it is recommended to use a specific tag, e.g. "4-alpha1".'
   echo '  - INDEXTOOL_OPTIONS  (optional) options to pass to IndexTool.'
-  echo '                       Defaults to "--threads 4".'
+  echo
+  echo 'By default, the dev version of BlackLab is used. If you would prefer a specific numbered version,'
+  echo 'pass it in environment variable BL_VERSION (e.g. "4.1.1")'
   echo
   echo 'By default, a Java heap size of 6G is used. If you need more, set the environment'
   echo 'variable BL_JAVA_HEAP_MEM to the desired value (e.g. "10G").'
   echo
   echo 'Examples:'
   echo
-  echo '  # Relative paths; Builtin format; Default Docker image version and IndexTool options'
+  echo '  # Relative paths; format installed in BL formats dir; Default Docker image version and IndexTool options'
   echo "  ./index-corpus.sh index input tei-p5"
   echo
   echo '  # Increase memory; absolute paths; format config file; Docker image version; IndexTool options'
-  echo '  BL_JAVA_HEAP_MEM=10G ./index-corpus.sh /bl-corpora/mycorpus /input-data/mycorpus'
-  echo "    /blacklab-formats/format.blf.yaml 4-alpha1 '--threads 2 --index-type external'"
+  echo '  BL_VERSION=4.1.1 BL_JAVA_HEAP_MEM=10G ./index-corpus.sh /bl-corpora/mycorpus /input-data/mycorpus'
+  echo "    /blacklab-formats/format.blf.yaml '--threads 2 --index-type external'"
   echo
   exit 1
 fi
 
+# BlackLab version to use
+BL_VERSION="${BL_VERSION:-dev}"
+
 # Set this environment variable to increase the heap size if needed
 BL_JAVA_HEAP_MEM=${BL_JAVA_HEAP_MEM:-6G}
+
+# Ensure target dir exists so we can find realpath and bind mount later
+mkdir -p $1
 
 # Absolute paths of our arguments
 BL_CORPUS_TARGET_DIR=$(realpath "$1")
 BL_CORPUS_INPUT_DIR=$(realpath $2)
 BL_CORPUS_FORMAT="$3"
 BL_CORPUS_FORMAT_FILE=$(realpath "$BL_CORPUS_FORMAT")
-BL_VERSION="${4:-dev}"
-BL_INDEXTOOL_OPTIONS="${5:---threads 4}"
+BL_INDEXTOOL_OPTIONS="$4"
 
 # Base names to use inside the container
 BL_CORPUS_NAME=$(basename $BL_CORPUS_TARGET_DIR)
@@ -56,9 +61,6 @@ BL_CORPUS_INPUT_DIR_NAME=$(basename $BL_CORPUS_INPUT_DIR)     # (so fromInputFil
 # Full paths inside container
 BL_CONTAINER_CORPUS_DIR="/data/index/$BL_CORPUS_NAME"
 BL_CONTAINER_INPUT_DIR="/input/$BL_CORPUS_INPUT_DIR_NAME"
-
-# Ensure target dir exists so we can bind mount
-mkdir -p $BL_CORPUS_TARGET_DIR
 
 # Determine the right permissions to use inside the container,
 # so our user owns the resulting files.
@@ -73,6 +75,19 @@ if [ -f "$BL_CORPUS_FORMAT_FILE" ]; then
   BIND_FORMAT="--mount type=bind,src=$BL_CORPUS_FORMAT_FILE,dst=$BL_CONTAINER_FORMAT "
 fi
 
+# Set Java options for the container:
+# - set the maximum heap size
+# - enable native access (Lucene mmap support)
+# - add incubator vector module (performance)
+# - route JUL (used by Lucene) through Log4j2
+JAVA_OPTS="\
+    -Xmx$BL_JAVA_HEAP_MEM \
+    --enable-native-access=ALL-UNNAMED \
+    --add-modules jdk.incubator.vector"
+
+# Make sure we have the latest version of the image
+docker pull instituutnederlandsetaal/blacklab:$BL_VERSION
+
 # Run the indexer
 docker run --user $BL_CONTAINER_USER_GROUP --rm \
     --name blacklab-indexer \
@@ -82,7 +97,8 @@ docker run --user $BL_CONTAINER_USER_GROUP --rm \
     instituutnederlandsetaal/blacklab:$BL_VERSION \
     /bin/bash -c "\
       cd /usr/local/lib/blacklab-tools && \
-      java -Xmx$BL_JAVA_HEAP_MEM -cp '*' nl.inl.blacklab.tools.IndexTool $BL_INDEXTOOL_OPTIONS create \
+      java $JAVA_OPTS -cp '*' nl.inl.blacklab.tools.IndexTool \
+        $BL_INDEXTOOL_OPTIONS create \
         $BL_CONTAINER_CORPUS_DIR \
         $BL_CONTAINER_INPUT_DIR \
         $BL_CONTAINER_FORMAT"
